# StereoKit-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  README_short.md  StereoKit  build.rs  config.toml  histo.txt  log.txt
.github/workflows/: rust.yml
assets/: center.glb  cuve.glb  mobiles.gltf  plane.glb
assets/fonts/: OFL.txt
assets/hdri/giza/: cubemap_rgba32.ktx2
assets/textures/: readme.md  screenshot.raw
examples/: comp_example_of_quest_log.txt  example_of_ALVR_D3D11_gnu.txt  example_of_ALVR_D3D11_msvc.txt  example_of_ALVR_EGL.txt  example_of_WiVRn_D3D11_gnu.txt  example_of_WiVRn_D3D11_msvc.txt  example_of_WiVRn_EGL.txt  example_of_quest_log.html  example_of_quest_log.txt  main.rs  main_pc.rs  main_raw.rs.old  manual.rs  test.rs
examples/demos/: LICENSE  a_stepper.rs  anchor1.rs  anim1.rs  asset1.rs  b_stepper.rs  biplane1.rs  browser1.rs  c_stepper.rs  font1.rs  hand_menu_radial0.rs  hand_menu_radial1.rs  input1.rs  interactor1.rs  layers1.rs  math1.rs  mod.rs  model1.rs  permission1.rs  plane1.rs  program.rs  render_list1.rs  screen1.rs  shaders1.rs  shadows1.rs  sprite1.rs  system_deep_link1.rs  tex1.rs  text1.rs  text2.rs  threads1.rs  threads2.rs  ui1.rs  ui2.rs
macros/: Cargo.toml
macros/src/: lib.rs
shaders_src/: basic.glsl  basic_shadow.hlsl  basic_shadow_caster.hlsl  blinker.hlsl  brick_pbr.hlsl  hud.hlsl  hud_text.hlsl  large_tile_pbr.hlsl  water_pbr.hlsl  water_pbr2.hlsl
src/: anchor.rs  event_loop.rs  ffi.rs  font.rs  framework.rs  interactor.rs  lib.rs  material.rs  maths.rs  mesh.rs  model.rs  permission.rs  prelude.rs  render_list.rs  shader.rs  sk.rs  sound.rs  sprite.rs  system.rs  tex.rs  ui.rs  util.rs
src/framework/: event_loop.rs  hand_menu.rs  mod.rs  screen.rs
src/tools/: build_tools.rs  file_browser.rs  fly_over.rs  log_window.rs  mod.rs  notif.rs  os_api.rs  passthrough_fb_ext.rs  screenshoot.rs  screenshot.rs  title.rs  virtual_kbd_meta.rs  xr_android_depth_texture.rs  xr_comp_layers.rs  xr_fb_display_refresh_rate.rs  xr_fb_passthrough.rs  xr_fb_render_model.rs  xr_meta_simultaneous_hands_controllers.rs  xr_meta_virtual_keyboard.rs
stereokit-macros/: Cargo.toml
stereokit-macros/src/: lib.rs
tests/: main.rs  main_tests.rs  maths_tests.rs
