[package]
name = "stereokit-rust"
version = "0.1.0"
edition = "2021"
description = "High-Level Rust bindings around the StereoKitC library for XR"
homepage = "https://stereokit.net/"
keywords = ["stereokit", "XR", "VR", "AR", "sys"]
license = "MIT"
links = "StereoKitC"
repository = "https://github.com/mvvvv/StereoKit-rust"


include = [
  "StereoKit/tools/include",
# "StereoKit/tools/skshaderc",
# "StereoKit/tools/skshaderc.exe",
  "/README.md",
]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "to_sks"

[build-dependencies]
cmake = "0.1.50"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = { version = "0.29", features = [ "android-native-activity" ] }
thiserror = "1.0"
bitflags = "2.4"
glam = "0.25"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.13"
android-activity = { version = "0.5", features = [ "native-activity" ] }
ndk-context = "0.1.1"
ndk = "0.8.0"

[[example]]
#---For PC only (vscode launcher)
name = "main_pc"
crate-type = ["bin"]

[[example]]
#---For All using cargo command
name = "main"
crate-type = ["cdylib"]

[package.metadata.android]
package ="com.stereokit.rust_binding_demo"
apk_label = "Stereokit-rust"
fullscreen = true
runtime_libs = "./quest_lib"
assets = "./assets"

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 29
max_sdk_version = 32


[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = false

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.access_network_state"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"
required = false

[package.metadata.android.application]
debuggable = true
label = "Stereokit-rust"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
extract_native_libs = true
has_code = false


[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.version"
value = "V2.0"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.ossplash"
value = "true"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest|quest2|cambria"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

[package.metadata.android.application.activity]
#name = ".MainActivity"
theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false


[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"



