[workspace]
members = ["stereokit-macros"]

[package]
name = "stereokit-rust"
version = "0.1.0"
resolver = "2"
edition = "2021"
#rust-version = "1.79"
description = "High-Level Rust bindings around the StereoKitC library for XR"
homepage = "https://stereokit.net/"
keywords = ["stereokit", "XR", "VR", "AR", "sys"]
license = "MIT"
links = "StereoKitC"
repository = "https://github.com/mvvvv/StereoKit-rust"

include = ["StereoKit/tools/include", "/README.md"]
readme = "README.md"

[features]
dynamic-openxr = [] # Add openxr_loader.so in Android APK
build-dynamic-openxr = [ "dynamic-openxr",] # Build openxr_loader from Khronos OpenXR project
event-loop = ["dep:winit"]
no-event-loop = ["dep:android-activity"]
force-local-deps = ["openxr-sys/linked"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "cargo-compile_sks"

[build-dependencies]
cmake = "0.1.50"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = { version = "0.30", features = [
  "android-native-activity",
], optional = true }
thiserror = "1.0"
bitflags = "2.4"
glam = "0.28"
openxr-sys = "0.11"
stereokit-macros = { path = "stereokit-macros" }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.14"
android-activity = { version = "0.6", features = [ "native-activity" ], optional = true  }
ndk-context = "0.1.1"
ndk = { version = "0.9.0", features = ["all"] }
ndk-sys = "0.6"
jni = "0.21"

[[example]]
#---For PC only (vscode launcher)
name = "main_pc"
crate-type = ["bin"]

[[example]]
#---For PC only (vscode launcher)
name = "manual"
crate-type = ["bin"]

[[example]]
#---For All using cargo command
name = "main"
crate-type = ["cdylib"]

[package.metadata.android]
package = "com.stereokit.rust_binding.demos"
build_targets = ["aarch64-linux-android"]
apk_label = "Stereokit-rust-demos"
assets = "./assets"
resources = "./res"
fullscreen = true
runtime_libs = "./target/runtime_libs"      #---the way to build and add Khronos libopenxr_loader.so for feature build-dynamic-openxr
#runtime_libs = "./quest_lib"            #---the way to add existing libopenxr_loader.so for feature dynamic-openxr

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 32
max_sdk_version = 32


[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.body_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.face_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.eye_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.overlay_keyboard"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.experimental.enabled"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAPTURE_AUDIO_OUTPUT"

[[package.metadata.android.uses_permission]]
name = "android.permission.MODIFY_AUDIO_SETTINGS"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

#[[package.metadata.android.uses_permission]]
#name = "android.permission.READ_DEVICE_CONFIG"
#required = true

[[package.metadata.android.uses_permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.BODY_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.FACE_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.EYE_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.USE_ANCHOR_API"
required = true

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.IMPORT_EXPORT_IOT_MAP_DATA"
required = false

[package.metadata.android.application]
debuggable = true
label = "StereoKit rust demos"
icon = "@mipmap/app_icon"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
extract_native_libs = true
has_code = false


[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.version"
value = "V2.0"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.ossplash"
value = "true"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest2|questpro|quest3"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

[package.metadata.android.application.activity]
#name = ".MainActivity"
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
  "com.oculus.intent.category.VR",
  "android.intent.category.LAUNCHER",
]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"
