[workspace]
members = ["stereokit-macros"]

[package]
name = "stereokit-rust"
version = "0.4.0-alpha.18"
resolver = "2"
edition = "2024"
#rust-version = "1.85"
description = "High-Level Rust bindings around the StereoKitC library for XR"
#homepage = "https://stereokit.net/"
keywords = ["stereokit", "VR", "sys", "MR", "OpenXR"]
license = "MIT"
#license-file = "LICENSE"
links = "StereoKitC"
repository = "https://github.com/mvvvv/StereoKit-rust"
categories = ["graphics", "gui", "rendering::engine", "mathematics"]
include = [
  "Cargo.toml",
  "build.rs",
  "src/*",
  "StereoKit/cmake",
  "StereoKit/tools/include",
  "StereoKit/StereoKitC",
  "StereoKit/CMakeLists.txt",
  "README.md",
  "LICENSE"
]
readme = "README_short.md"

[package.metadata.docs.rs]
features = ["event-loop"]

[features]
dynamic-openxr = [] # Add openxr_loader.so in Android APK
build-dynamic-openxr = [ "dynamic-openxr",] # Build openxr_loader from Khronos OpenXR project
event-loop = ["dep:winit"]
no-event-loop = ["dep:android-activity"]
force-local-deps = []
skc-in-dll = [] # Create and use StereoKitC as a DLL when building for windows (MSVC & GNU)
test-xr-mode = [] # Replace AppMode::Offscreen with AppMode::XR in test macros

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "cargo-compile_sks"

[[bin]]
name = "cargo-build_sk_rs"

[build-dependencies]
cmake = "0.1.54"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = { version = "0.30", features = [
  "android-native-activity",
], optional = true }
thiserror = "2.0"
bitflags = "2.9"
glam = "0.30"
openxr-sys = "0.11"
stereokit-macros = { path = "./stereokit-macros", version = "0.5.1" }
#stereokit-macros = "0.5.1"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.15"
android-activity = { version = "0.6", features = [ "native-activity" ], optional = true  }
ndk-context = "0.1.1"
ndk = { version = "0.9.0", features = ["all"] }
ndk-sys = "0.6"
jni = "0.21"

[[example]]
#---For PC only (vscode launcher)
name = "main_pc"
crate-type = ["bin"]

[[example]]
#---For PC only (vscode launcher)
name = "manual"
crate-type = ["bin"]

[[example]]
#---For All using cargo command
name = "main"
crate-type = ["cdylib"]

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[package.metadata.android]
package = "com.stereokit.rust_binding.demos"
build_targets = ["aarch64-linux-android"]
#build_targets = ["aarch64-linux-android","x86_64-linux-android"]
apk_label = "Stereokit-rust-demos"
assets = "./assets"
resources = "./res"
fullscreen = true
runtime_libs = "./target/runtime_libs"      #---the way to build and add Khronos libopenxr_loader.so for feature build-dynamic-openxr
#runtime_libs = "./quest_lib"            #---the way to add existing libopenxr_loader.so for feature dynamic-openxr

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 32
max_sdk_version = 34

#---Android features common
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true

#---Android feature HorizonOS
[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.face_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.eye_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.overlay_keyboard"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.trackedkeyboard"
required = false

[[package.metadata.android.uses_feature]]
name = "com.oculus.software.body_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "com.oculus.experimental.enabled"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.RENDER_MODEL"
required = true

#---Android feature AndroidXR
# [[package.metadata.android.uses_feature]]
# name = "android.software.xr.immersive"
# required = true

[[package.metadata.android.uses_feature]]
name = "android.software.xr.api.openxr"
required = true
version = 0x00010000

[[package.metadata.android.uses_feature]]
name = "android.hardware.xr.input.hand_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "android.hardware.xr.input.controller"
required = false

[[package.metadata.android.uses_feature]]
name = "android.hardware.xr.input.eye_tracking"
required = false

#---Android permission common
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAPTURE_AUDIO_OUTPUT"

[[package.metadata.android.uses_permission]]
name = "android.permission.MODIFY_AUDIO_SETTINGS"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

#[[package.metadata.android.uses_permission]]
#name = "android.permission.READ_DEVICE_CONFIG"
#required = true

[[package.metadata.android.uses_permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"

#---Android permission for Horizon OS
[[package.metadata.android.uses_permission]]
name = "horizonos.permission.HAND_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.BODY_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.FACE_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.EYE_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.RENDER_MODEL"
required = true

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.USE_ANCHOR_API"
required = true

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.USE_SCENE"
required = true

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.BOUNDARY_VISIBILITY"
required = true

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.IMPORT_EXPORT_IOT_MAP_DATA"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.TRACKED_KEYBOARD"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.USE_COLOCATION_DISCOVERY_API"
required = false

#---Android permission AndroidXR
[[package.metadata.android.uses_permission]]
name = "android.permission.SCENE_UNDERSTANDING_COARSE"
required = false

# [[package.metadata.android.uses_permission]]
# name = "android.permission.HAND_TRACKING"
# required = false

[[package.metadata.android.uses_permission]]
name = "android.permission.EYE_TRACKING_FINE"
required = false


#---Android Application
[package.metadata.android.application]
debuggable = true
label = "StereoKit rust demos"
icon = "@mipmap/app_icon"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
extract_native_libs = true
has_code = false

#---Horizon OS
[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.version"
value = "V2.0"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.ossplash"
value = "true"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest2|questpro|quest3"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

#---Pico
[[package.metadata.android.application.meta_data]]
name = "pvr.app.type"
value = "vr"

[[package.metadata.android.application.meta_data]]
name = "handtracking"
value = "1"

#---Snapdragon
[[package.metadata.android.application.meta_data]]
name = "spaces.version"
value = "0.15.0"

#---AndroidXR TODO WHICH ONE IS ACTUALLY NEEDED?
[[package.metadata.android.application.meta_data]]
name = "android.window.PROPERTY_ACTIVITY_XR_START_MODE"
value = "XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED"

[package.metadata.android.application.activity]
#name = ".MainActivity"
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
  "com.oculus.intent.category.VR",
  "android.intent.category.LAUNCHER",
]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"
