[package]
name = "stereokit-macros"
description = "Macros for stereokit-rust"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mvvvv/StereoKit-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2= "1.0"
